--- a/src/app/admin/statistics/statistics.component.html
+++ b/src/app/admin/statistics/statistics.component.html
@@ -1,7 +1,7 @@
-<div class="container-fluid p-5">
-    <div class="row">
+<div class="container-fluid py-3 px-0">
+    <div class="row mx-0">
         <ng-container *ngFor="let item of model.items; let last = last">
-            <mat-accordion class="col-12" [class.mb-2]="!last">
+            <mat-accordion class="col-md-6 col-12 px-md-3 px-1" [class.mb-2]="!last">
                 <mat-expansion-panel>
                     <mat-expansion-panel-header>
                         <mat-panel-title>
