--- a/src/app/admin/reservation/reservation.component.html
+++ b/src/app/admin/reservation/reservation.component.html
@@ -3,7 +3,7 @@
     <ng-container *ngIf="model.isIndividual">
       <app-manage-reservation-form
         [bookingType]="model.bookingType.individual" [isAdmin]="isAdmin" [isEditMode]="isEditMode" 
-        [reservationData]="reservationData" [roomType]="model.roomType.single" 
+        [reservationData]="reservationData" [roomType]="model.roomType.single" [isWaitingEnabled]="isWaitingEnabled" 
         (bookingDone)="bookingDone.emit()" (closeModal)="closeModal.emit()">
       </app-manage-reservation-form>
     </ng-container>
@@ -20,12 +20,12 @@
     <ng-container *ngIf="model.isDouble">
       <app-manage-reservation-form
         [bookingType]="model.bookingType.group" [isAdmin]="isAdmin" [isEditMode]="isEditMode" 
-        [reservationData]="reservationData" [roomType]="model.roomType.double" 
+        [reservationData]="reservationData" [roomType]="model.roomType.double" [isWaitingEnabled]="isWaitingEnabled" 
         (bookingDone)="bookingDone.emit()" (closeModal)="closeModal.emit()">
       </app-manage-reservation-form>
     </ng-container>
   </mat-tab>
-  <mat-tab label="حجز غرفة ثلاثية (800 جنيه)">
+  <mat-tab label="حجز غرفة ثلاثية (850 جنيه)">
     <div class="alert alert-info">
       <div class="font-weight-bold">
         {{'common.notes' | translate}}:
@@ -37,7 +37,7 @@
     <ng-container *ngIf="model.isTriple">
       <app-manage-reservation-form
         [bookingType]="model.bookingType.group" [isAdmin]="isAdmin" [isEditMode]="isEditMode" 
-        [reservationData]="reservationData" [roomType]="model.roomType.triple" 
+        [reservationData]="reservationData" [roomType]="model.roomType.triple" [isWaitingEnabled]="isWaitingEnabled"
         (bookingDone)="bookingDone.emit()" (closeModal)="closeModal.emit()">
       </app-manage-reservation-form>
     </ng-container>
@@ -54,7 +54,7 @@
     <ng-container *ngIf="model.isQuad">
       <app-manage-reservation-form
         [bookingType]="model.bookingType.group" [isAdmin]="isAdmin" [isEditMode]="isEditMode" 
-        [reservationData]="reservationData" [roomType]="model.roomType.quad" 
+        [reservationData]="reservationData" [roomType]="model.roomType.quad" [isWaitingEnabled]="isWaitingEnabled"
         (bookingDone)="bookingDone.emit()" (closeModal)="closeModal.emit()">
       </app-manage-reservation-form>
     </ng-container>
