--- a/src/app/admin/all-subscription/room-cancellation/room-cancellation.component.html
+++ b/src/app/admin/all-subscription/room-cancellation/room-cancellation.component.html
@@ -1,5 +1,5 @@
 <div mat-dialog-title class="d-flex justify-content-between align-content-center">
-    <div class="font-weight-bold">إلغاء التسكين</div>
+    <div class="fw-bold">إلغاء التسكين</div>
     <button class="p-0 d-flex justify-content-center align-items-center" (click)="close()">
         <mat-icon>close</mat-icon>
     </button>
@@ -10,7 +10,7 @@
     </div>
     <div class="px-0 pb-3">
         <div>هل أنت متاكد أنك تريد إلغاء تسكين هذا العضو ؟</div>
-        <div class="font-weight-bold pt-2">{{memberName}}</div>
+        <div class="fw-bold pt-2">{{memberName}}</div>
     </div>
 </div>
 
