--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
         <ng-container *ngFor="let card of cards">
             <div class="col-lg-2 col-md-4 col-6 card-col" (click)="navigateToPage(card.route)">
                 <div class="text-center bg-white w-100 justify-content-center align-items-center flex-column card-content p-3 d-flex">
-                    <div class="card-value font-weight-bold">{{card.value}}</div>
+                    <div class="card-value fw-bold">{{card.value}}</div>
                     <div class="card-title font-size-md-20">{{card.label }}</div>
                 </div>
             </div>
