--- a/src/app/admin/export-members/export-members.component.html
+++ b/src/app/admin/export-members/export-members.component.html
@@ -1,5 +1,5 @@
 <div mat-dialog-title class="d-flex justify-content-between align-content-center">
-    <div class="font-weight-bold">تصدير</div>
+    <div class="fw-bold">تصدير</div>
     <button class="p-0 d-flex justify-content-center align-items-center" (click)="cancel()">
         <mat-icon>close</mat-icon>
     </button>
