--- a/src/app/admin/reservation/manage-reservation-form/manage-reservation-form.component.html
+++ b/src/app/admin/reservation/manage-reservation-form/manage-reservation-form.component.html
@@ -274,13 +274,13 @@
         </div>
         <div class="col-md-5 col-12">
           <label>{{'common.totalCost' | translate}}</label>
-          <div class="font-weight-bold text-dark">{{model.totalCost}} جنيه</div>
+          <div class="fw-bold text-dark">{{model.totalCost}} جنيه</div>
         </div>
         <div class="col-md-7 col-12">
           <label>
             {{'common.remaining' | translate}}
           </label>
-          <div class="font-weight-bold text-dark">{{model.remaining}} جنيه</div>
+          <div class="fw-bold text-dark">{{model.remaining}} جنيه</div>
         </div>
       </div>
     </div>
