--- a/src/app/admin/reservation/reservation.component.html
+++ b/src/app/admin/reservation/reservation.component.html
@@ -10,7 +10,7 @@
   </mat-tab>
   <mat-tab label="حجز غرفة مزدوجة (950 جنيه)">
     <div class="alert alert-info">
-      <div class="font-weight-bold">
+      <div class="fw-bold">
         {{'common.notes' | translate}}:
       </div>
       <div>{{'common.childrenNotes' | translate}}</div>
@@ -27,7 +27,7 @@
   </mat-tab>
   <mat-tab label="حجز غرفة ثلاثية (850 جنيه)">
     <div class="alert alert-info">
-      <div class="font-weight-bold">
+      <div class="fw-bold">
         {{'common.notes' | translate}}:
       </div>
       <div>{{'common.childrenNotes' | translate}}</div>
@@ -44,7 +44,7 @@
   </mat-tab>
   <mat-tab label="حجز غرفة رباعية (700 جنيه)">
     <div class="alert alert-info">
-      <div class="font-weight-bold">
+      <div class="fw-bold">
         {{'common.notes' | translate}}:
       </div>
       <div>{{'common.childrenNotes' | translate}}</div>
