--- a/src/app/admin/primary/primary.component.html
+++ b/src/app/admin/primary/primary.component.html
@@ -148,22 +148,22 @@
                         <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'table.counts' | translate}}</th>
                         <td mat-cell *matCellDef="let element">
                             <div class="d-flex">
-                                <div class="font-weight-bold">{{'table.adultsCount' | translate}}: &nbsp;</div>
+                                <div class="fw-bold">{{'table.adultsCount' | translate}}: &nbsp;</div>
                                 <div>{{ element.adultsCount + 1 }}</div>
                             </div>
                             <div class="d-flex">
-                                <div class="font-weight-bold">{{'table.childrenCount' | translate}}: &nbsp;</div>
+                                <div class="fw-bold">{{'table.childrenCount' | translate}}: &nbsp;</div>
                                 <div>{{ element.childrenCount }}</div>
                             </div>
                         </td>
                         <td mat-footer-cell *matFooterCellDef>
                             <div class="d-flex flex-column justify-content-center align-items-center">
                                 <div class="d-flex">
-                                    <div class="font-weight-bold">{{'table.adultsCount' | translate}}: &nbsp;</div>
+                                    <div class="fw-bold">{{'table.adultsCount' | translate}}: &nbsp;</div>
                                     <div>{{getAllAdultsCount()}}</div>
                                 </div>
                                 <div class="d-flex">
-                                    <div class="font-weight-bold">{{'table.childrenCount' | translate}}: &nbsp;</div>
+                                    <div class="fw-bold">{{'table.childrenCount' | translate}}: &nbsp;</div>
                                     <div>{{ getAllChildrenCount() }}</div>
                                 </div>
                             </div>
@@ -274,17 +274,17 @@
                         <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.price' | translate}}</th>
                         <td mat-cell *matCellDef="let element">
                             <div class="d-flex">
-                                <div class="font-weight-bold">{{'common.totalCost' | translate}}:&nbsp;</div>
+                                <div class="fw-bold">{{'common.totalCost' | translate}}:&nbsp;</div>
                                 <a (click)="viewCostDetails(element)" class="total">
                                     {{element.totalCost}}
                                 </a>
                             </div>
                             <div class="d-flex">
-                                <div class="font-weight-bold">{{'common.paid' | translate}}:&nbsp;</div>
+                                <div class="fw-bold">{{'common.paid' | translate}}:&nbsp;</div>
                                 <div>{{element.paid}}</div>
                             </div>
                             <div class="d-flex">
-                                <div class="font-weight-bold">{{'common.remaining' | translate}}:&nbsp;</div>
+                                <div class="fw-bold">{{'common.remaining' | translate}}:&nbsp;</div>
                                 <div>{{ element.totalCost - element.paid }}</div>
                             </div>
                         </td>
@@ -322,7 +322,7 @@
                         <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.lastUpdate' | translate}}</th>
                         <td mat-cell *matCellDef="let element">
                             <div class="d-flex">
-                                <div class="font-weight-bold">{{'common.lastUpdatedBy' | translate}}:&nbsp;</div>
+                                <div class="fw-bold">{{'common.lastUpdatedBy' | translate}}:&nbsp;</div>
                                 <ng-container *ngIf="element.lastUpdatedBy; else empty">{{element.lastUpdatedBy}}</ng-container>
                             </div>
                             <ng-container *ngIf="element.lastUpdateDate">
