--- a/src/app/admin/reservation/booking-successfully/booking-successfully.component.html
+++ b/src/app/admin/reservation/booking-successfully/booking-successfully.component.html
@@ -1,5 +1,5 @@
 <div mat-dialog-title class="d-flex justify-content-between align-content-center">
-    <div class="font-weight-bold">{{'common.confirmBooking' | translate}}</div>
+    <div class="fw-bold">{{'common.confirmBooking' | translate}}</div>
     <button class="p-0 d-flex justify-content-center align-items-center" (click)="close()">
         <mat-icon>close</mat-icon>
     </button>
