--- a/src/app/admin/reservation/manage-reservation/manage-reservation.component.html
+++ b/src/app/admin/reservation/manage-reservation/manage-reservation.component.html
@@ -1,5 +1,5 @@
 <div mat-dialog-title class="d-flex justify-content-between align-content-center">
-    <div class="font-weight-bold">{{ (data ? 'common.update' : 'common.add') | translate }}</div>
+    <div class="fw-bold">{{ (data ? 'common.update' : 'common.add') | translate }}</div>
     <button class="p-0 d-flex justify-content-cener align-items-center" (click)="close()">
         <mat-icon>close</mat-icon>
     </button>
@@ -7,6 +7,6 @@
 <div mat-dialog-content>
     <ng-container *ngIf="isDataLoaded">
         <app-reservation [isAdmin]="true" [isEditMode]="!!data" [reservationData]="reservationData"
-            (closeModal)="close(true)" #reservationComp></app-reservation>
+            (closeModal)="close(true)" #reservationComp />
     </ng-container>
 </div>
