--- a/src/app/admin/rooms/manage-rooms/manage-rooms.component.html
+++ b/src/app/admin/rooms/manage-rooms/manage-rooms.component.html
@@ -1,5 +1,5 @@
 <div mat-dialog-title class="d-flex justify-content-between align-content-center">
-    <div class="font-weight-bold">{{ (data ? 'common.update' : 'common.add') | translate }}</div>
+    <div class="fw-bold">{{ (data ? 'common.update' : 'common.add') | translate }}</div>
     <button class="p-0 d-flex justify-content-cener align-items-center" (click)="close()">
         <mat-icon>close</mat-icon>
     </button>
