--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -27,14 +27,14 @@
       </div>
     </mat-toolbar>
     <div class="m-5">
-      <div class="alert alert-info text-center p-5 font-weight-bold">
+      <div class="alert alert-info text-center p-5 fw-bold">
         لا توجد اي مؤتمرات متاحة حالياً
       </div>
     </div>
   </div>
 
   <div *ngIf="isWaitingEnabled">
-    <div class="alet alert-warning text-center p-3 font-weight-bold">
+    <div class="alert alert-warning text-center p-3 fw-bold">
       {{setting[0].waitingListMessage}}
     </div>
   </div>
@@ -49,7 +49,7 @@
 <div *ngIf="isReservationAllowed && showForm" class="container h-100 mt-lg-3 mt-0 px-0">
   <div class="d-flex justify-content-center">
     <div class="col-12 px-0 container-border main-tabs">
-      <app-reservation (bookingDone)="bookingSuccessfully()" [isWaitingEnabled]="isWaitingEnabled"></app-reservation>
+      <app-reservation (bookingDone)="bookingSuccessfully()" [isWaitingEnabled]="isWaitingEnabled" />
     </div>
   </div>
 </div>
