--- a/src/app/home/info/info.component.html
+++ b/src/app/home/info/info.component.html
@@ -5,15 +5,15 @@
         </div>
         <div class="row mx-0 pt-4 conference-info">
             <div *ngIf="item.generalAlerts" class="col-md-4 col-12 px-md-3 px-0">
-                <div class="text-center font-weight-bold">{{'settings.generalAlerts' | translate}}</div>
+                <div class="text-center fw-bold">{{'settings.generalAlerts' | translate}}</div>
                 <div [innerHTML]="item.generalAlerts"></div>
             </div>
             <div *ngIf="item.priceDetails" class="col-md-4 col-12 px-md-3 px-0">
-                <div class="text-center font-weight-bold">{{'settings.priceDetails' | translate}}</div>
+                <div class="text-center fw-bold">{{'settings.priceDetails' | translate}}</div>
                 <div [innerHTML]="item.priceDetails"></div>
             </div>
             <div *ngIf="item.importantDates" class="col-md-4 col-12 px-md-3 px-0">
-                <div class="text-center font-weight-bold">{{'settings.importantDates' | translate}}</div>
+                <div class="text-center fw-bold">{{'settings.importantDates' | translate}}</div>
                 <div  [innerHTML]="item.importantDates"></div>
             </div>
         </div>
