--- a/src/app/shared/components/confirm-delete/confirm-delete.component.html
+++ b/src/app/shared/components/confirm-delete/confirm-delete.component.html
@@ -1,5 +1,5 @@
 <div mat-dialog-title class="d-flex justify-content-between align-content-center">
-    <div class="font-weight-bold">{{'common.confirmDelete' | translate}}</div>
+    <div class="fw-bold">{{'common.confirmDelete' | translate}}</div>
     <button class="p-0 d-flex justify-content-center align-items-center" (click)="cancel()">
         <mat-icon>close</mat-icon>
     </button>
@@ -7,7 +7,7 @@
 <div mat-dialog-content>
     <div class="px-0 py-3">
         <div>{{'common.sureToDelete' | translate}}</div>
-        <div class="font-weight-bold pt-2"> {{itemName}} </div>
+        <div class="fw-bold pt-2"> {{itemName}} </div>
     </div>
 </div>
 
