--- a/src/app/shared/components/ticket-status/ticket-status.component.html
+++ b/src/app/shared/components/ticket-status/ticket-status.component.html
@@ -1,20 +1,20 @@
-<ng-container [ngSwitch]="status">
-    <div *ngSwitchCase="bookingStatus.confirmed">
-        <div class="badge px-2 py-1 badge-info">{{ 'bookingStatus.confirmed' | translate }}</div>
-    </div>
-    <div *ngSwitchCase="bookingStatus.duplicated">
-        <div class="badge px-2 py-1 badge-warning">{{ 'bookingStatus.duplicated' | translate }}</div>
-    </div>
-    <div *ngSwitchCase="bookingStatus.canceled">
-        <div class="badge px-2 py-1 badge-danger">{{ 'bookingStatus.canceled' | translate }}</div>
-    </div>
-    <div *ngSwitchCase="bookingStatus.waiting">
-        <div class="badge px-2 py-1 badge-secondary">{{ 'bookingStatus.waiting' | translate }}</div>
-    </div>
-    <div *ngSwitchCase="bookingStatus.deleted">
-        <div class="badge px-2 py-1 badge-danger">محذوف</div>
-    </div>
-    <div *ngSwitchDefault>
-        <div class="badge px-2 py-1 badge-success">{{ 'bookingStatus.new' | translate }}</div>
-    </div>
-</ng-container>
+@switch(status()) {
+    @case (bookingStatus().confirmed) {
+        <div class="badge px-2 py-1 bg-info">{{ 'bookingStatus.confirmed' | translate }}</div>
+    }
+    @case (bookingStatus().duplicated) {
+        <div class="badge px-2 py-1 bg-warning">{{ 'bookingStatus.duplicated' | translate }}</div>
+    }
+    @case (bookingStatus().canceled) {
+        <div class="badge px-2 py-1 bg-danger">{{ 'bookingStatus.canceled' | translate }}</div>
+    }
+    @case (bookingStatus().waiting) {
+        <div class="badge px-2 py-1 bg-secondary">{{ 'bookingStatus.waiting' | translate }}</div>
+    }
+    @case (bookingStatus().deleted) {
+        <div class="badge px-2 py-1 bg-danger">محذوف</div>
+    }
+    @default {
+        <div class="badge px-2 py-1 bg-success">{{ 'bookingStatus.new' | translate }}</div>
+    }
+}
