--- a/src/app/admin/all-subscription/all-subscription.component.html
+++ b/src/app/admin/all-subscription/all-subscription.component.html
@@ -195,7 +195,7 @@
             </th>
             <td mat-cell *matCellDef="let element" class="col-1">
               <ng-container *ngIf="element.isMain; else empty">
-                <app-ticket-status [status]="element.bookingStatus"></app-ticket-status>
+                <app-ticket-status [status]="element.bookingStatus" />
               </ng-container>
             </td>
             <td mat-footer-cell *matFooterCellDef></td>
