--- a/src/app/admin/primary/primary.component.html
+++ b/src/app/admin/primary/primary.component.html
@@ -5,8 +5,8 @@
                 <app-empty-data></app-empty-data>
             </div>
             <div [hidden]="model.dataSource && model.dataSource.data.length < 1" class="mat-elevation-z8">
-                <table mat-table [dataSource]="model.dataSource" matSort matSortActive="bookingDate" matSortDirection="desc"
-                    matSortDisableClear="true">
+                <table mat-table [dataSource]="model.dataSource" matSort matSortActive="bookingDate"
+                    matSortDirection="desc" matSortDisableClear="true">
                     <ng-container matColumnDef="mobileView">
                         <th mat-header-cell *matHeaderCellDef></th>
                         <td mat-cell *matCellDef="let element" class="py-2">
@@ -28,7 +28,8 @@
                                         </a>
                                     </div>
                                     <div> <b>{{'common.paid' | translate}}:</b> {{element.paid}}</div>
-                                    <div> <b>{{'common.remaining' | translate}}:</b> {{ element.totalCost - element.paid }}</div>
+                                    <div> <b>{{'common.remaining' | translate}}:</b> {{ element.totalCost - element.paid
+                                        }}</div>
                                     <div class="d-flex">
                                         <b>{{'common.room' | translate}}:</b>&nbsp;
                                         <ng-container *ngIf="element.room; else empty">
@@ -58,8 +59,8 @@
                                             &nbsp;
                                             <div class="d-flex">
                                                 (
-                                                    <ng-container *ngIf="element.roomType; else empty">
-                                                        <ng-container [ngSwitch]="element.roomType">
+                                                <ng-container *ngIf="element.roomType; else empty">
+                                                    <ng-container [ngSwitch]="element.roomType">
                                                         <div *ngSwitchCase="model.roomType.double">
                                                             {{ 'common.double' | translate }}
                                                         </div>
@@ -72,17 +73,20 @@
                                                         <div *ngSwitchDefault>
                                                             {{ 'room.single' | translate }}
                                                         </div>
-                                                        </ng-container>
                                                     </ng-container>
+                                                </ng-container>
                                                 )
                                             </div>
                                         </ng-container>
                                     </div>
-                                    <div><b>{{'common.transportationName' | translate}}</b>: {{ element.transportationName }} </div>
+                                    <div><b>{{'common.transportationName' | translate}}</b>: {{
+                                        element.transportationName }} </div>
                                     <div><b>{{'menu.address' | translate}}</b>: {{ element.addressName }} </div>
                                     <div><b>{{'common.age' | translate}}</b>: {{ element.age }} </div>
-                                    <div><b>{{'common.birthDate' | translate}}:</b> {{element.birthDate.toMillis() | date}}</div>
-                                    <div> <b>{{'common.bookingDate' | translate}}:</b> {{element.bookingDate.toMillis() | date:'medium'}}</div>
+                                    <div><b>{{'common.birthDate' | translate}}:</b> {{element.birthDate.toMillis() |
+                                        date}}</div>
+                                    <div> <b>{{'common.bookingDate' | translate}}:</b> {{element.bookingDate.toMillis()
+                                        | date:'medium'}}</div>
                                     <div class="d-flex">
                                         <b>{{'common.lastUpdateDate' | translate}}:</b>&nbsp;
                                         <ng-container *ngIf="element.lastUpdateDate; else empty">
@@ -91,7 +95,8 @@
                                     </div>
                                     <div class="d-flex">
                                         <b>{{'common.lastUpdatedBy' | translate}}:</b>&nbsp;
-                                        <ng-container *ngIf="element.lastUpdatedBy; else empty">{{element.lastUpdatedBy}}</ng-container>
+                                        <ng-container
+                                            *ngIf="element.lastUpdatedBy; else empty">{{element.lastUpdatedBy}}</ng-container>
                                     </div>
                                     <div> <b>{{'common.userNotes' | translate}}:</b>
                                         <ng-container *ngIf="element.userNotes; else empty">
@@ -113,8 +118,8 @@
                                             <button mat-menu-item class="primary" (click)="update(element)">
                                                 {{'common.edit' | translate}}
                                             </button>
-                                            <button *ngIf="element.bookingStatus != model.bookingStatus.deleted" mat-menu-item class="text-danger"
-                                                (click)="delete(element)">
+                                            <button *ngIf="element.bookingStatus != model.bookingStatus.deleted"
+                                                mat-menu-item class="text-danger" (click)="delete(element)">
                                                 {{'common.delete' | translate}}
                                             </button>
                                         </mat-menu>
@@ -181,7 +186,8 @@
                     </ng-container>
 
                     <ng-container matColumnDef="transportation">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.transportationName' | translate}}</th>
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.transportationName' |
+                            translate}}</th>
                         <td mat-cell *matCellDef="let element">{{ element.transportationName }}</td>
                         <td mat-footer-cell *matFooterCellDef></td>
                     </ng-container>
@@ -205,8 +211,8 @@
                             </ng-container>
                             <div class="d-flex">
                                 (
-                                    <ng-container *ngIf="element.roomType; else empty">
-                                        <ng-container [ngSwitch]="element.roomType">
+                                <ng-container *ngIf="element.roomType; else empty">
+                                    <ng-container [ngSwitch]="element.roomType">
                                         <div *ngSwitchCase="model.roomType.double">
                                             {{ 'common.double' | translate }}
                                         </div>
@@ -219,8 +225,8 @@
                                         <div *ngSwitchDefault>
                                             {{ 'room.single' | translate }}
                                         </div>
-                                        </ng-container>
                                     </ng-container>
+                                </ng-container>
                                 )
                             </div>
                         </td>
@@ -229,7 +235,8 @@
 
                     <ng-container matColumnDef="birthDate">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.birthDate' | translate}}</th>
-                        <td mat-cell *matCellDef="let element" class="width-135">{{ element.birthDate.toMillis() | date }}</td>
+                        <td mat-cell *matCellDef="let element" class="width-135">{{ element.birthDate.toMillis() | date
+                            }}</td>
                         <td mat-footer-cell *matFooterCellDef></td>
                     </ng-container>
 
@@ -248,7 +255,8 @@
                     </ng-container>
 
                     <ng-container matColumnDef="lastUpdateDate">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.lastUpdateDate' | translate}}</th>
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.lastUpdateDate' | translate}}
+                        </th>
                         <td mat-cell *matCellDef="let element" class="width-135">
                             <ng-container *ngIf="element.lastUpdateDate; else empty">
                                 {{element.lastUpdateDate.toMillis() | date:'medium'}}
@@ -325,7 +333,8 @@
                         <td mat-cell *matCellDef="let element">
                             <div class="d-flex">
                                 <div class="fw-bold">{{'common.lastUpdatedBy' | translate}}:&nbsp;</div>
-                                <ng-container *ngIf="element.lastUpdatedBy; else empty">{{element.lastUpdatedBy}}</ng-container>
+                                <ng-container
+                                    *ngIf="element.lastUpdatedBy; else empty">{{element.lastUpdatedBy}}</ng-container>
                             </div>
                             <ng-container *ngIf="element.lastUpdateDate">
                                 <div>{{element.lastUpdateDate.toMillis() | date:'medium'}}</div>
@@ -344,7 +353,8 @@
                                 <button mat-menu-item class="primary" (click)="update(element)">
                                     {{'common.edit' | translate}}
                                 </button>
-                                <button *ngIf="element.bookingStatus != model.bookingStatus.deleted" mat-menu-item class="text-danger" (click)="delete(element)">
+                                <button *ngIf="element.bookingStatus != model.bookingStatus.deleted" mat-menu-item
+                                    class="text-danger" (click)="delete(element)">
                                     {{'common.delete' | translate}}
                                 </button>
                             </mat-menu>
@@ -365,18 +375,18 @@
 <button mat-icon-button color="primary" class="mobile-filter-button d-flex" [matMenuTriggerFor]="menu">
     <i class="fa-solid fa-ellipsis-vertical"></i>
     <mat-menu #menu="matMenu">
-      <button mat-menu-item class="primary" (click)="showAdvancedFilter()">
-        <i class="fa-solid fa-filter"></i>&nbsp;
-        البحث المتقدم
-      </button>
-      <button mat-menu-item class="primary" (click)="openExportModal()">
-        <i class="fa-solid fa-download"></i>&nbsp;
-        تصدير الأعضاء
-      </button>
-      <button mat-menu-item class="primary" (click)="add()">
-        <i class="fa-regular fa-square-plus"></i>&nbsp;
-        إضافة أشتراك
-      </button>
+        <button mat-menu-item class="primary" (click)="showAdvancedFilter()">
+            <i class="fa-solid fa-filter"></i>&nbsp;
+            البحث المتقدم
+        </button>
+        <button mat-menu-item class="primary" (click)="openExportModal()">
+            <i class="fa-solid fa-download"></i>&nbsp;
+            تصدير الأعضاء
+        </button>
+        <button mat-menu-item class="primary" (click)="add()">
+            <i class="fa-regular fa-square-plus"></i>&nbsp;
+            إضافة أشتراك
+        </button>
     </mat-menu>
 </button>
 
