--- a/src/app/admin/all-subscription/all-subscription.component.html
+++ b/src/app/admin/all-subscription/all-subscription.component.html
@@ -70,7 +70,7 @@
 
             </td>
             <td mat-footer-cell *matFooterCellDef class="px-0">
-              <div class="pr-3 d-flex">
+              <div class="px-3 d-flex">
                 {{'common.total' | translate}}: <b>{{model.total}}</b>
               </div>
             </td>
