--- a/src/app/admin/rooms/rooms.component.html
+++ b/src/app/admin/rooms/rooms.component.html
@@ -62,7 +62,7 @@
             </td>
             <td mat-footer-cell *matFooterCellDef class="px-0">
               <div class="d-flex justify-content-between align-items-center">
-                <div class="pr-3">{{'common.total' | translate}}: <b>{{model.dataSource.data.length}}</b></div>
+                <div class="px-3">{{'common.total' | translate}}: <b>{{model.dataSource.data.length}}</b></div>
               </div>
           </td>
           </ng-container>
