--- a/src/app/admin/primary/primary.component.html
+++ b/src/app/admin/primary/primary.component.html
@@ -129,7 +129,7 @@
                             </div>
                         </td>
                         <td mat-footer-cell *matFooterCellDef class="px-0">
-                            <div class="pr-3 d-flex">
+                            <div class="px-3 d-flex">
                                 {{'common.total' | translate}}: <b>{{model.total}}</b>
                             </div>
                         </td>
