--- a/src/app/admin/statistics/statistics.component.html
+++ b/src/app/admin/statistics/statistics.component.html
@@ -17,9 +17,11 @@
                         </mat-panel-title>
                     </mat-expansion-panel-header>
                     <ol *ngIf="item.count > 0; else noData">
-                        <ng-container *ngFor="let name of item.members">
-                            <li>{{name}}</li>
-                        </ng-container>
+                        @for (member of item.members; track member) {
+                            <li class="d-flex justify-content-between align-items-center py-2" [class.border-bottom]="!$last">
+                                {{member}}
+                            </li>
+                        }
                     </ol>
                 </mat-expansion-panel>
             </mat-accordion>
@@ -38,9 +40,12 @@
                         </mat-panel-title>
                     </mat-expansion-panel-header>
                     <ol *ngIf="costItem.members.length > 0; else noData">
-                        <ng-container *ngFor="let text of costItem.members">
-                            <li>{{text}}</li>
-                        </ng-container>
+                        @for (member of costItem.members; track member.key) {
+                            <li class="d-flex justify-content-between align-items-center py-2" [class.border-bottom]="!$last">
+                                <span>{{member.key}}</span>
+                                <small class="badge bg-dark">{{member.value}}</small>
+                            </li>
+                        }
                     </ol>
                 </mat-expansion-panel>
             </mat-accordion>
