--- a/src/app/admin/statistics/statistics.component.html
+++ b/src/app/admin/statistics/statistics.component.html
@@ -1,5 +1,40 @@
 <div class="container-fluid py-3 px-0">
     <div class="row mx-0">
+        @for(item of model.busStatistics(); track item) {
+            <mat-accordion class="col-lg-4 col-md-6 col-12 px-md-3 px-1 mb-2">
+                <mat-expansion-panel>
+                    <mat-expansion-panel-header>
+                        <mat-panel-title>
+                            <div class="d-flex">
+                                {{item.key | translate}}:
+                                <div class="fontweight-bold px-2">
+                                    {{item.count}} فرد
+                                </div>
+                            </div>
+                        </mat-panel-title>
+                    </mat-expansion-panel-header>
+                    <ol *ngIf="item.count > 0; else noData">
+                        @for (member of item.members; track member) {
+                            <li class="py-2" [class.border-bottom]="!$last">
+                                <div class="d-flex justify-content-between align-items-center py-2" >
+                                    <div class="d-flex flex-column">
+                                        <span>{{member.name}}</span>
+                                        <span>{{member.mobile}}</span>
+                                    </div>
+                                    <small class="badge bg-dark">
+                                        @if (member.remaining) {
+                                            {{member.remaining}} جنيه
+                                        } @else {
+                                            ---
+                                        }
+                                    </small>
+                                </div>
+                            </li>
+                        }
+                    </ol>
+                </mat-expansion-panel>
+            </mat-accordion>
+        }
         <ng-container *ngFor="let item of model.items; let last = last">
             <mat-accordion class="col-lg-4 col-md-6 col-12 px-md-3 px-1 mb-2">
                 <mat-expansion-panel>
