--- a/src/app/admin/all-subscription/all-subscription.component.html
+++ b/src/app/admin/all-subscription/all-subscription.component.html
@@ -61,7 +61,7 @@
                   </div>
                 </div>
                 <div class="d-flex justify-content-between flex-column">
-                  <app-social-media [mobile]="element.mobile"></app-social-media>
+                  <app-social-media [mobile]="element.mobile" [conferenceProgram]="model.conferenceProgram()" [user]="element" />
                   <a *ngIf="element.bookingStatus != model.bookingStatus.deleted" href="javascript:void(0)" (click)="addRoomToMember(element)" class="primary pt-4">
                     <i class="fa-solid fa-bed"></i>
                   </a>
@@ -104,7 +104,7 @@
             <td mat-cell *matCellDef="let element" class="width-135">
               <div class="text-center">
                 <div>{{ element.mobile}}</div>
-                <app-social-media [mobile]="element.mobile"></app-social-media>
+                <app-social-media [mobile]="element.mobile" [conferenceProgram]="model.conferenceProgram()" [user]="element" />
               </div>
             </td>
             <td mat-footer-cell *matFooterCellDef></td>
