--- a/src/app/admin/statistics/statistics.component.html
+++ b/src/app/admin/statistics/statistics.component.html
@@ -1,5 +1,71 @@
 <div class="container-fluid py-3 px-0">
     <div class="row mx-0">
+        @for(item of model.buildingList(); track item) {
+            <mat-accordion class="col-lg-4 col-md-6 col-12 px-md-3 px-1 mb-2">
+                <mat-expansion-panel>
+                    <mat-expansion-panel-header>
+                        <mat-panel-title>
+                            <div class="d-flex">
+                                {{'rooms.building' | translate}}: {{item.name}}
+                                <div class="fontweight-bold px-2">
+                                    ({{item.members.length}})
+                                </div>
+                            </div>
+                        </mat-panel-title>
+                    </mat-expansion-panel-header>
+                    <ol *ngIf="item.members.length > 0; else noData">
+                        @for (member of item.members; track member.memberId) {
+                            <li class="py-2" [class.border-bottom]="!$last">
+                                <div class="d-flex justify-content-between align-items-center py-2" >
+                                    <div class="d-flex flex-column w-100">
+                                        <div class="d-flex justify-content-between align-items-center w-100">
+                                            <div>{{member.name}}</div>
+                                            <div>{{member.room}}</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+                        }
+                    </ol>
+                </mat-expansion-panel>
+            </mat-accordion>
+        }
+        @for(item of model.roomsList(); track item) {
+            <mat-accordion class="col-lg-4 col-md-6 col-12 px-md-3 px-1 mb-2">
+                <mat-expansion-panel>
+                    <mat-expansion-panel-header>
+                        <mat-panel-title>
+                            <div class="d-flex">
+                                {{item.key | translate}}:
+                                <div class="fontweight-bold px-2">
+                                    {{item.rooms.length}}
+                                </div>
+                            </div>
+                        </mat-panel-title>
+                    </mat-expansion-panel-header>
+                    <ol *ngIf="item.rooms.length > 0; else noData">
+                        @for (room of item.rooms; track room.id) {
+                            <li class="py-2" [class.border-bottom]="!$last">
+                                <div class="d-flex justify-content-between align-items-center py-2" >
+                                    <div class="d-flex flex-column w-100">
+                                        <div class="d-flex justify-content-between align-items-center w-100">
+                                            <div>{{'room.name' | translate}}: {{room.room}}</div>
+                                            @if (!item.isComplete) {
+                                                <span class="badge bg-dark">
+                                                    {{'rooms.available' | translate}}: {{room.available}}
+                                                </span>
+                                            }
+                                        </div>
+                                        <div>{{'room.building' | translate}}: {{room.building}}</div>
+                                        <div>{{'room.floor' | translate}}: {{room.floor}}</div>
+                                    </div>
+                                </div>
+                            </li>
+                        }
+                    </ol>
+                </mat-expansion-panel>
+            </mat-accordion>
+        }
         @for(item of model.busStatistics(); track item) {
             <mat-accordion class="col-lg-4 col-md-6 col-12 px-md-3 px-1 mb-2">
                 <mat-expansion-panel>
@@ -101,6 +167,19 @@
                                             }
                                         </div>
                                      }
+                                }
+                                @if (group.room || group.building || group.floor) {
+                                    <div class="text-dark fw-bold">
+                                        @if (group.building) {
+                                            <span class="ps-2">{{'rooms.building' | translate}}: {{group.building}} -</span>
+                                        }
+                                        @if (group.floor) {
+                                            <span class="ps-2">{{'rooms.floor' | translate}}: {{group.floor}} -</span>
+                                        }
+                                        @if (group.room) {
+                                            <span>{{'common.room' | translate}}: {{group.room}}</span>
+                                        }
+                                    </div>
                                 }
                             </li>
                         }
