--- a/src/app/admin/rooms/manage-rooms/manage-rooms.component.html
+++ b/src/app/admin/rooms/manage-rooms/manage-rooms.component.html
@@ -15,7 +15,7 @@
         </mat-form-field>
         <mat-form-field class="col-lg-6 col-12">
             <mat-label>المبني</mat-label>
-            <input type="text" matInput formControlName="building" inputmode="numeric">
+            <input type="text" matInput formControlName="building" inputmode="text">
             <mat-error *ngIf="form.get('building')!.hasError('required')">
                 {{'validations.requiredField' | translate}}
             </mat-error>
